<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_interest_based_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.farhan.thenewboston.InterestSelection">


    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/search_tv" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/interest_question"
                android:layout_weight="1"
                android:id="@+id/interest_question"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/choose_statement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/option_tv"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/teaching_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/teaching_opt_tv"
                android:background="@drawable/my_border"

                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorRed" />

            <!--android:background="@drawable/my_border" -->
            <TextView
                android:text="@string/cycling_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cycling_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorRed" />

            <TextView
                android:text="@string/trekking_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/trekking_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorRed" />
            <TextView
                android:text="@string/marathon_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/marathon_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorRed" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <TextView
                android:text="@string/public_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/public_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />



            <TextView
                android:text="@string/emergency_help_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/emergency_help_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


            <TextView
                android:text="@string/content_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/content_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/photography_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/photography_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/technology_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/technology_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/leadership_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/leadership_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/science_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/science_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


            <TextView
                android:text="@string/reading_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/reading_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/history_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/history_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/exercise_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/exercise_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <TextView
                android:text="@string/environment_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/environment_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/health_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/health_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/game_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/game_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:text="@string/field_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/field_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


            <TextView
                android:text="@string/magazine_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/magazine_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />






        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <TextView
                android:text="@string/mathematics_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/mathematics_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />



            <TextView
                android:text="@string/music_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/music_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />
            <TextView
                android:text="@string/drought_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/drought_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/research_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/research_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />
            <TextView
                android:text="@string/rural_dev_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rural_dev_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <TextView
                android:text="@string/spiritual_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spiritual_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />
            <TextView
                android:text="@string/organization_opt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/organization_opt_tv"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorAccent" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:id="@+id/next_btn"
                android:textColor="@color/colorAccent" />
        </TableRow>


    </TableLayout>
    </ScrollView>

</RelativeLayout>
