<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.farhan.thenewboston.Registration">

    <TextView
        android:text="@string/almost_done"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/almostthere_tv"
        android:layout_width="match_parent"
        android:textColor="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/create_account_lbl"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/create_account_tv"
        android:layout_width="match_parent"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/almostthere_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF0000FF"
        android:layout_below="@+id/create_account_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/vertical_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/vertical_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/name_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_tv"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/fName_et"
                    android:hint="@string/first_edittxt"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/editText2"
                    android:hint="@string/last_edittxt"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/email_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_tv" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email_txt"
                    android:hint="@string/email_edittxt"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/username_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_tv" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/username_et"
                    android:hint="@string/username_edittxt"
                    android:layout_weight="1" />

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/password_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_tv" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:id="@+id/password_et"
                    android:hint="@string/password_edittxt"
                    android:layout_weight="1" />

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/gender_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_tv" />

            </LinearLayout>





            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sex_radio_grp"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/male_rad">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/male_rad"
                    android:text="@string/male_radio"
                    />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/female_rad"
                    android:text="@string/female_radio"
                    />
            </RadioGroup>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob_btn"
                    android:text="@string/date_of_birth_lbl"
                    android:onClick="setData" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob_tv"
                    android:text="@string/login_btn" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn"
                    android:text="@string/make_my_account"
                    android:onClick="registration_complete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
